Fix wrapping sign-in ja locale (bug 886294)

--- a/hearth/media/css/header.styl
+++ b/hearth/media/css/header.styl
@@ -230,6 +230,7 @@
     &.persona {
         display: none;
         margin-left: 15px;
+        word-break: keep-all;
         word-wrap: normal;
         &.loading-submit {
             hidetext();
